--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -24,13 +24,33 @@ jobs:
     - name: Setup Android SDK
       uses: android-actions/setup-android@v3
 
-    - name: Setup Gradle
-      uses: gradle/gradle-build-action@v2
+    - name: Cache Gradle packages
+      uses: actions/cache@v3
+      with:
+        path: |
+          ~/.gradle/caches
+          ~/.gradle/wrapper
+        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+        restore-keys: |
+          ${{ runner.os }}-gradle-
 
-    - name: Download Gradle Wrapper
+    - name: Setup complete Gradle wrapper
       run: |
+        # Remove existing wrapper if any
+        rm -rf gradle/wrapper
         mkdir -p gradle/wrapper
+        
+        # Download gradle wrapper jar
         curl -L -o gradle/wrapper/gradle-wrapper.jar https://repo1.maven.org/maven2/org/gradle/gradle-wrapper/8.0/gradle-wrapper-8.0.jar
+        
+        # Create gradle-wrapper.properties
+        cat > gradle/wrapper/gradle-wrapper.properties << EOF
+        distributionBase=GRADLE_USER_HOME
+        distributionPath=wrapper/dists
+        distributionUrl=https\://services.gradle.org/distributions/gradle-8.0-bin.zip
+        zipStoreBase=GRADLE_USER_HOME
+        zipStorePath=wrapper/dists
+        EOF
 
     - name: Make gradlew executable
       run: chmod +x ./gradlew
@@ -43,8 +63,13 @@ jobs:
         $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager "platforms;android-34"
         $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager "build-tools;34.0.0"
 
-    - name: Build APK
-      run: ./gradlew assembleDebug --stacktrace
+    - name: Verify Gradle setup
+      run: ./gradlew --version
+
+    - name: Clean and build APK
+      run: |
+        ./gradlew clean
+        ./gradlew assembleDebug --stacktrace --info
 
     - name: Upload APK artifact
       uses: actions/upload-artifact@v4
